# zenblend

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
benches/: mask_spans.rs
src/: blend.rs  lib.rs  mask.rs  zenode_defs.rs
src/simd/: mod.rs  neon.rs  portable.rs  scalar.rs  wasm128.rs  wide_kernels.rs  x86.rs
tests/: simd_consistency.rs
