[package]
name = "zenblend"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
description = "Porter-Duff and artistic blend modes on premultiplied linear f32 RGBA rows. SIMD-accelerated."
repository = "https://github.com/imazen/zenblend"
keywords = ["blend", "compositing", "porter-duff", "simd", "alpha"]
categories = ["graphics", "multimedia::images", "no-std"]

[features]
default = ["std"]
std = ["archmage/std", "magetypes/std"]
avx512 = ["archmage/avx512"]
zennode = ["dep:zennode"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("avx512"))'] }

[dependencies]
archmage = { version = "0.9.9", default-features = false, features = ["macros"] }
magetypes = { version = "0.9.9", default-features = false }
safe_unaligned_simd = "0.2.5"
wide = { version = "1.1", default-features = false }
libm = { version = "0.2", default-features = false }
zennode = { path = "../zennode/zennode", default-features = false, features = ["derive"], optional = true }

[[bench]]
name = "mask_spans"
harness = false

[dev-dependencies]
