[package]
name = "zenblend"
version = "0.1.3"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "Porter-Duff and artistic blend modes on premultiplied linear f32 RGBA rows. SIMD-accelerated."
repository = "https://github.com/imazen/zenblend"
keywords = ["blend", "compositing", "porter-duff", "simd", "alpha"]
categories = ["graphics", "multimedia::images"]
include = ["src/**/*.rs", "benches/**/*.rs", "tests/**/*.rs", "Cargo.toml", "LICENSE-AGPL3", "LICENSE-COMMERCIAL", "README.md", "CHANGELOG.md"]

[features]
default = ["std"]
std = []

# archmage::incant! macro internally checks cfg(feature = "avx512") even when no
# v4 tier is used — suppress the unexpected_cfgs warning from the macro expansion.
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("avx512"))'] }

[dependencies]
archmage = { version = "0.9.16", default-features = false, features = ["macros", "std"] }
magetypes = { version = "0.9.16", default-features = false, features = ["std"] }
safe_unaligned_simd = "0.2.5"

[[bench]]
name = "mask_spans"
harness = false

[dev-dependencies]
